<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>daheng_camera</name>
  <version>0.0.0</version>
  <description>Daheng MER2-160-227U3M camera ROS2 driver</description>
  <maintainer email="wele0612@student.ubc.ca">wele0612</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>camera_info_manager</depend>
  <depend>opencv</depend>
  <build_depend>compressed_image_transport</build_depend>
  <build_depend>theora_image_transport</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>theora_image_transport</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>