<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematype="xlsx"?>
<package format="3">
  <name>doorlock_decoder_qt</name>
  <version>0.0.0</version>
  <description>QT视频显示界面</description>
  <maintainer email="1617188306@qq.com">rm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv</depend>    <!-- 添加 OpenCV 依赖 -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>